--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">OmxPiRemote</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="playpause">Play/Pause</string>
+    <string name="startServer">Start</string>
+    <string name="stopServer">Stop</string>
+    <string name="urlHint">Url or path to target</string>
 
 </resources>
