--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,9 +4,18 @@
     <string name="app_name">OmxPiRemote</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="playpause">Play/Pause</string>
+    <string name="playpause">\t\nPlay/Pause\n\t</string>
     <string name="startServer">Start</string>
     <string name="stopServer">Stop</string>
     <string name="urlHint">Url or path to target</string>
+    <string name="seekLeftSmall">Seek -30</string>
+    <string name="seekLeftBig">Seek -600</string>
+    <string name="seekRightSmall">Seek +30</string>
+    <string name="seekRightBig">Seek +600</string>
+    <string name="volumeDown">Volume Down</string>
+    <string name="volumeUp">Volume Up</string>
+    <string name="seekLeft">Seek Left</string>
+    <string name="seekRight">Seek Right</string>
+    <string name="fileLabel">File: </string>
 
 </resources>
